--- a/Website API/templates/vote.html
+++ b/Website API/templates/vote.html
@@ -16,10 +16,10 @@
         Cast your vote now!
     </div>
     <form method="POST" action="/votea">
-        <button type="submit" style="margin: 15px" name="vote_a" value="Vote A" class="btn btn-danger">Vote A</button>
+        <button type="submit" style="margin: 15px; margin-left: 50%; margin-right: 50%;" name="vote_a" value="Vote A" class="btn btn-danger">Vote A</button>
     </form>
     <form method="POST" action="/voteb">
-        <button type="submit" style="margin: 15px" name="vote_b" value="Vote B" class="btn btn-success">Vote B</button>
+        <button type="submit" style="margin: 15px; margin-left: 50%; margin-right: 50%;" name="vote_b" value="Vote B" class="btn btn-success">Vote B</button>
     </form>
 </body>
 </html>
