--- a/Website API/Version 1/templates/vote.html
+++ b/Website API/Version 1/templates/vote.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Charities Day</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" media="screen" href ="../static/css/bootstrap.min.css">
     <link rel="stylesheet" media="screen" href ="{{ url_for('static', filename='css/bootstrap.min.css') }}">
+    <link rel="stylesheet" href="../static/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-theme.min.css') }}">
 </head>
 <body>
@@ -13,13 +15,13 @@
         <strong>Charities Day Vote System</strong>
     </div>
     <div class="alert alert-info">
-        Cast your vote now!
+        <div style="text-align: center">Cast your vote now!</div>
     </div>
     <form method="POST" action="/votea">
-        <button type="submit" style="margin: 15px" name="vote_a" value="Vote A" class="btn btn-danger">Vote A</button>
+        <button type="submit" style="margin-left: 50%" name="vote_a" value="Vote A" class="btn btn-danger">Vote A</button>
     </form>
     <form method="POST" action="/voteb">
-        <button type="submit" style="margin: 15px" name="vote_b" value="Vote B" class="btn btn-success">Vote B</button>
+        <button type="submit" style="margin-left: 50%; margin-top: 10px" name="vote_b" value="Vote B" class="btn btn-success">Vote B</button>
     </form>
 </body>
 </html>
