--- a/Website API/Version 1/templates/vote.html
+++ b/Website API/Version 1/templates/vote.html
@@ -18,10 +18,10 @@
         <div style="text-align: center">Cast your vote now!</div>
     </div>
     <form method="POST" action="/votea">
-        <button type="submit" style="margin-left: 50%" name="vote_a" value="Vote A" class="btn btn-danger">Vote A</button>
+        <button type="submit" style="margin: 15px; margin-left: 50%; margin-right: 50%;" name="vote_a" value="Vote A" class="btn btn-danger">Vote A</button>
     </form>
     <form method="POST" action="/voteb">
-        <button type="submit" style="margin-left: 50%; margin-top: 10px" name="vote_b" value="Vote B" class="btn btn-success">Vote B</button>
+        <button type="submit" style="margin: 15px; margin-left: 50%; margin-right: 50%;" name="vote_b" value="Vote B" class="btn btn-success">Vote B</button>
     </form>
 </body>
 </html>
