quiz_apy.py Rewrite

--- a/Website API/Version 2/templates/vote_notready.html
+++ b/Website API/Version 2/templates/vote_notready.html
@@ -18,6 +18,9 @@
         <div style=>You're all ready to go.</div>
     </div>
     <div class="alert alert-info">
+        <p>Code: <strong>{{ code }}</strong></p>
+    </div>
+    <div class="alert alert-info">
         Press "Vote Now" when a question appears!
     </div>
     <form method="POST" action="/submitYear" style="width: 100%; margin-left: auto; margin-right: auto">
