--- a/Website API/Version 2/templates/yearForm.html
+++ b/Website API/Version 2/templates/yearForm.html
@@ -16,10 +16,13 @@
     <div class="alert alert-primary">
         <strong style="font-size: 20px">Charities Day Vote System</strong>
     </div>
+    <div class="alert alert-success">
+        <p>Here is your code! <strong>{{ code }}</strong></p>
+    </div>
     <div class="alert alert-info">
         <div style="text-align: center; font-size: 15px">To start, select your year group</div>
     </div>
-    <form class="form-horizontal" method="post" action="/submitYear" style="width: 100%">
+    <form class="form-horizontal" method="post" action="/yearForm" style="width: 100%">
         <div class="form-group">
             <label class="control-label col-sm-2 requiredField" style="margin-left: 10px" for="selectYear">
                 Year
@@ -65,9 +68,12 @@
     </form>
 
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
-        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong>
+        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong></p>
     </div>
-    </p>
+    <div class="alert alert-primary" style="margin-top: 20px; font-style: italic; height: 10px">
+        <p style="text-align: center; margin-top: -10px">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
+    </div>
+    
 </body>
 
 </html>
