--- a/Website API/Version 2/templates/admin_login.html
+++ b/Website API/Version 2/templates/admin_login.html
@@ -38,6 +38,9 @@
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong>
     </div>
     </p>
+    <div class="alert alert-primary" style="margin-top: 20px; font-style: italic; height: 10px">
+        <p style="text-align: center; margin-top: -10px">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
+    </div>
 </body>
 
 </html>
