--- a/Website API/Version 2/templates/home.html
+++ b/Website API/Version 2/templates/home.html
@@ -14,26 +14,11 @@
 
 <body>
     <div class="alert alert-primary">
-        <strong style="font-size: 20px">Charities Day Admin</strong>
+        <strong style="font-size: 20px">Charities Day Quizes and Voting</strong>
     </div>
-    <div class="alert alert-info">
-        <div>To gain access, please enter the password.</div>
+    <div class="alert alert-success">
+        <p>Here is your code <strong>{{ code }}</strong> from Year <strong>{{ year }}</strong></p>
     </div>
-    <form method="POST" action="/getAdmin" style="width: 100%; margin-left: auto; margin-right: auto">
-        <div class="form-group">
-            <label for="password" style="margin-left:10px">Password</label>
-            <input type="password" id="passwordField" name="passwordField" class="form-control" placeholder="Password" required>
-        </div>
-        <div class="form-group">
-            <button type="submit" style="margin-left: 25%; margin-right: 25%; font-size: 15px; width: 50%; height: 40px"
-                name="login" value="Login" class="btn btn-danger">Login</button>
-        </div>
-        {% if passwordFailed == True %}
-            <div class="alert alert-danger">
-                Incorrect Password
-            </div>
-        {% endif %}
-    </form>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong>
     </div>
