--- a/Website API/Version 2/templates/home.html
+++ b/Website API/Version 2/templates/home.html
@@ -14,8 +14,9 @@
 
 <body>
     <div class="alert alert-primary">
-        <strong style="font-size: 20px">Charities Day Quizes and Voting</strong>
+        <img src="/static/files/cdLogoQuiz.png" style="max-width:200px; height:auto; display: block; margin: 0 auto">
     </div>
+
     <div class="alert alert-success">
         <p>Here is your code <strong>{{ code }}</strong> from Year <strong>{{ year }}</strong></p>
     </div>
