--- a/Website API/Version 2/templates/vote.html
+++ b/Website API/Version 2/templates/vote.html
@@ -22,6 +22,6 @@
         <button type="submit" style="font-size: 18px; width: 100%; height: 50px; margin-top: 20px" name="vote_b" value="B" class="btn btn-success">Vote B</button>
     </form>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
-        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong></div></p>
+        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers</div></p>
 </body>
 </html>
