--- a/Website API/Version 2/templates/adminLogin.html
+++ b/Website API/Version 2/templates/adminLogin.html
@@ -40,7 +40,7 @@
         {% endif %}
     </form>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
-        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong>
+        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
     </div>
     </p>
     <div class="alert alert-primary" style="margin-top: 20px; font-style: italic; height: 10px">
