--- a/Website API/Version 2/templates/adminPanel.html
+++ b/Website API/Version 2/templates/adminPanel.html
@@ -19,7 +19,7 @@
     </div>
     <span class="badge badge-success">Users: {{ userCount }}</span>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
-        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong>
+        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
     </div>
     </p>
     <div class="alert alert-primary" style="margin-top: 20px; font-style: italic; height: 10px">
