--- a/Website API/Version 2/templates/home.html
+++ b/Website API/Version 2/templates/home.html
@@ -27,9 +27,14 @@
                 name='{{ quiz }}' type='submit' value='{{ quiz }}'>{{ quiz }}</button>
         </div>
         {% endfor %}
+        {% if quizzes|length == 0 %}
+            <div style="width:100%">
+                <p style="text-align: center">There are no more quizzes available right now.</p>
+            </div>
+        {% endif %}
     </form>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
-        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong>
+        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers
     </div>
     </p>
     <div class="alert alert-primary" style="margin-top: 20px; font-style: italic; height: 10px">
