--- a/Website API/Version 2/templates/vote_notready.html
+++ b/Website API/Version 2/templates/vote_notready.html
@@ -27,7 +27,7 @@
         <button type="submit" style="margin-left: 25%; margin-right: 25%; font-size: 15px; width: 50%; height: 40px" name="vote_a" value="A" class="btn btn-default">Vote Now</button>
     </form>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
-        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong></div></p>
+        <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers</div></p>
     <div class="alert alert-primary" style="margin-top: 20px; font-style: italic; height: 10px">
         <p style="text-align: center; margin-top: -10px">Programmed by <strong>ENTITY Development</strong> and <strong>Bit Bandits</strong></p>
     </div>
