--- a/Website API/Version 2/templates/voted.html
+++ b/Website API/Version 2/templates/voted.html
@@ -24,6 +24,6 @@
         <button type="submit" style="margin: 15px" name="vote_redo" value="Revote" class="btn btn-success">Vote Again</button>
     </form>
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
-            <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong></div></p>
+            <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers</div></p>
 </body>
 </html>
