Hidden code from yearForm page

--- a/Website API/Version 2/templates/yearForm.html
+++ b/Website API/Version 2/templates/yearForm.html
@@ -16,9 +16,9 @@
     <div class="alert alert-primary">
         <strong style="font-size: 20px">Charities Day Vote System</strong>
     </div>
-    <div class="alert alert-success">
+    <!-- <div class="alert alert-success">
         <p>Here is your code! <strong>{{ code }}</strong></p>
-    </div>
+    </div> -->
     <div class="alert alert-info">
         <div style="text-align: center; font-size: 15px">To start, select your year group</div>
     </div>
