--- a/Website API/Version 2/templates/yearForm.html
+++ b/Website API/Version 2/templates/yearForm.html
@@ -20,8 +20,10 @@
         <p>Here is your code! <strong>{{ code }}</strong></p>
     </div> -->
     <div class="alert alert-info">
-        <div style="text-align: center; font-size: 15px">To start, select your year group</div>
+        <div style="text-align: center; font-size: 15px">To start, select your year group.</div>
     </div>
+    <div class="container rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+
     <form method="POST" action="/yearForm" style="width: 100%; margin-left: auto; margin-right: auto">
         <div class="form-group">
             <label class="control-label col-sm-2 requiredField" style="margin-left: 10px" for="selectYear">
@@ -64,6 +66,13 @@
                 </button>
         </div>
     </form>
+    </div>
+    <hr>
+    <div class="container" style="padding: 20px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+        <h4><strong>What is this?</strong></h4>
+        <p>You'll be able to participate in numerous quizzes throughout the day. Plus you can have your say with live voting during stage acts!</p>
+        <p>Once you press submit you'll get a unique code which is how your vote is counted. You won't need to remember it.</p>
+    </div>
 
     <div class="alert alert-warning" style="margin-top: 50px; font-style: italic; height: 10px">
         <p style="text-align: center; margin-top: -10px">Powered By <strong>Team Lightning</strong> Servers</p>
