--- a/Website API/Version 2/templates/home.html
+++ b/Website API/Version 2/templates/home.html
@@ -17,28 +17,30 @@
         <img src="../static/files/cdLogoQuiz.png" style="max-width:200px; height:auto; display: block; margin: 0 auto">
     </div>
 
-    {% set greeting = range(1, 7) | random %}
-    <div class="alert alert-success">
+    {% set greeting = range(1, 9) | random %}
+    <div class="alert alert-success" style="text-align: center; font-size: 18px">
         {% if greeting == 1 %}
         <p><strong>{{ code }}</strong>: Cheat code activated. Entering secret level <strong>{{ year }}</strong></p>
         {% elif greeting == 2 %}
-        <p>Hey <strong>{{ code }}</strong> from year <strong>{{ year }}</strong>!</p>
+        <p>Hey <strong>{{ code }}</strong> from Year <strong>{{ year }}</strong>!</p>
         {% elif greeting == 3 %}
-        <p>Getting ready, <strong>{{ code }}</strong>? We know year <strong>{{ year }}</strong> is.</p>
+        <p>Getting ready, <strong>{{ code }}</strong>? We know Year <strong>{{ year }}</strong> is.</p>
         {% elif greeting == 4 %}
-        <p>All aboard, <strong>{{ code }}</strong>! You're on the year <strong>{{ year }}</strong> train.</p>
+        <p>All aboard, <strong>{{ code }}</strong>! You're on the Year <strong>{{ year }}</strong> train.</p>
         {% elif greeting == 5 %}
         <p>Hello there, <strong>{{ code }}</strong>. Year <strong>{{ year }}</strong> has the high ground.</p>
         {% elif greeting == 6 %}
-        <p>Ground control to year <strong>{{ year }}</strong>. <strong>{{ code }}</strong> has just landed.</p>
+        <p>Ground control to Year <strong>{{ year }}</strong>. <strong>{{ code }}</strong> has just landed.</p>
         {% elif greeting == 7 %}
-        <p>Brace yourselves year <strong>{{ year }}</strong>, <strong>{{ code }}</strong> has just arrived.</p>
+        <p>Brace yourselves Year <strong>{{ year }}</strong>, <strong>{{ code }}</strong> has just arrived.</p>
+        {% elif greeting == 8 %}
+        <p>Alexa, play <strong>{{ code }}</strong> by Year <strong>{{ year }}</strong>.</p>
         {% endif %}
 
     </div>
 
 
-    <div class="container rounded" style="padding: 10px; background-color: rgb(214, 236, 214); border-radius: 15px;margin-left:2%; margin-right:2%; width:96%">
+    <div class="container rounded" style="padding: 10px; background-color: rgb(220, 255, 255); border-radius: 15px;margin-left:2%; margin-right:2%; width:96%">
         <h4 style="text-align: center">Vote Events</h4>
         <p style="text-align: center">Have your say about on-stage events!</p>
     </div>
@@ -47,7 +49,7 @@
     <hr>
 
 
-    <div class="container rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+    <div class="container rounded" style="padding: 10px; background-color: rgb(220, 255, 255); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
         <h4 style="text-align: center">Quiz Events</h4>
         <p style="text-align: center">Answer questions with limited time!</p>
         <form method='POST' action='/getQuiz' style="width: 100%; margin-left: auto; margin-right: auto">
