--- a/Website API/Version 2/templates/yearForm.html
+++ b/Website API/Version 2/templates/yearForm.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="alert alert-primary">
-        <strong style="font-size: 20px">Charities Day Vote System</strong>
+        <img src="../static/files/cdLogoQuiz.png" style="max-width:200px; height:auto; display: block; margin: 0 auto">
     </div>
     <!-- <div class="alert alert-success">
         <p>Here is your code! <strong>{{ code }}</strong></p>
@@ -32,7 +32,7 @@
                     *
                 </span>
             </label>
-            <div class="col-sm-10">
+            <div class="col-sm-10" style="width:100%">
                 <select class="select form-control" id="selectYear" name="selectYear" style="margin-left: 5%; margin-right: 5%; width: 90%; margin-bottom: 10px" required>
                     <option selected="selected">
                     </option>
