--- a/Website API/Version 2/templates/quizPage.html
+++ b/Website API/Version 2/templates/quizPage.html
@@ -23,22 +23,28 @@
     <div class="alert alert-info">
         <strong>QUIZ: {{ quizName }}</strong>
     </div>
-    <div class="progress" style="width:80%; margin-right: 10%; margin-left:10%">
-        <div id="countdownBar" class="progress-bar progress-bar-striped progress-bar-animated bg-primary" style="width: 100%"></div>
+    <div class="container rounded" style="padding: 10px; background-color: rgb(240, 240, 240); border-radius: 15px; margin-left:2%; margin-right:2%; width:96%">
+        <div class="progress" style="width:80%; margin-right: 10%; margin-left:10%">
+            <div id="countdownBar" class="progress-bar progress-bar-striped progress-bar-animated bg-primary" style="width: 100%"></div>
+        </div>
+        <p style="text-align: center"><strong id="progressLeft">5</strong> seconds remaining!</p>
     </div>
     <script>
         function move(countdownTime) {
-          var elem = document.getElementById("countdownBar");
-          var width = 100;
-          var id = setInterval(frame, (countdownTime*10));
-          function frame() {
-            if (width <= 1) {
-              clearInterval(id);
-            } else {
-              width--;
-              elem.style.width = width + '%';
+            var elem = document.getElementById("countdownBar");
+            var width = 100;
+            var prg = document.getElementById("progressLeft")
+            var id = setInterval(frame, (countdownTime * 10));
+            function frame() {
+                if (width <= 1) {
+                    clearInterval(id);
+                } else {
+                    width--;
+                    // document.getElementById("progressLeft").innerText = toString(Math.floor((width/100)*5))
+                    prg.innerText = toString(Math.floor((width / 100) * 5))
+                    elem.style.width = width + '%';
+                }
             }
-          }
         }
         // move({{ countdownTime|safe }})
         move(5)
@@ -58,7 +64,7 @@
             {% endfor %}
             </fieldset>
             <script type="text/javascript">
-           var wait=setTimeout("document.question.submit();",5500);
+                var wait = setTimeout("document.question.submit();", 5500);
             </script>
         </form>
     </div>
